Fixed styling of the content inspector to show a scrollbar

--- a/concept-narrative-editor-framework/src/inspector/ContentInspector.css
+++ b/concept-narrative-editor-framework/src/inspector/ContentInspector.css
@@ -1,5 +1,7 @@
 #inspectorEditWindow {
     padding: 8px;
+    height: 100%;
+    overflow-y: scroll;
 }
 
 #inspectorEditWindow .row {
